hphp/hack/test/typecheck/invariant.php.like_types.exp
File "invariant.php", line 13, characters 26-31:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "invariant.php", line 13, characters 26-31:
But got string
